Added temporary files to demonstrate pagination

--- a/config.toml
+++ b/config.toml
@@ -82,7 +82,7 @@ theme = "grid-side"
             description = "Your personal blog"
             link = "/blog/"
             image = "/img/tmp/car.jpg"
-            always_show_text = true
+            #always_show_text = true
             #color = "#FFF"
             #cell_large = 4
             #cell_medium = 6
