--- a/config.toml
+++ b/config.toml
@@ -117,7 +117,10 @@ PygmentsCodeFences = true
             description = "Your personal blog"
             link = "/post/"
             image = "/img/tmp/car.jpg"
-            grayscale = true
+            #color = "blue"
+            #grayscale = true
+            #no_highlight = true
+            #always_show_text = true
 
         [[Params.Cells.List]]
 
