Updated github link to point to new account name

--- a/config.toml
+++ b/config.toml
@@ -59,7 +59,7 @@ PygmentsCodeFences = true
         [[Params.Footer.List]]
 
             icon_class = "github"
-            icon_link = "https://www.github.com/rcsenkbeil"
+            icon_link = "https://www.github.com/chipsenkbeil"
 
     #
     # Contains the Cells representing the sections of your website. Each cell
