Fixed bad 2015 gallery references, refactored pepper gallery to raw gallery section

--- a/config.toml
+++ b/config.toml
@@ -128,7 +128,7 @@ PygmentsCodeFences = true
 
             name = "Pepper"
             description = "Pictures and videos of my dog, Pepper"
-            link = "/pepper/"
+            link = "/gallery/"
             image = "/img/pepper.jpg"
             image_position = "top"
 
