--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ theme = "grid-side"
 copyright = "Copyright &#169; by Chip Senkbeil"
 paginate = 12
 PygmentsCodeFences = true
-disqusShortname = "chipsenkbeil.com"
+disqusShortname = "chipsenkbeil"
 
 # About section of menu
 [[Menu.Main]]
