Re-enable disqus

--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ pygmentscodefencesguesssyntax = true
 googleAnalytics = "UA-71733200-2"
 
 # Disable disqus as I'll take comments via Twitter or other mediums
-# disqusShortname = "chipsenkbeil"
+disqusShortname = "chipsenkbeil"
 
 [params]
     author = "Chip Senkbeil"
