Re-add Google Analytics

--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 pygmentsUseClasses=true
 
-# googleAnalytics = "UA-71733200-2"
+googleAnalytics = "UA-71733200-2"
 
 # Disable disqus as I'll take comments via Twitter or other mediums
 # disqusShortname = "chipsenkbeil"
